# GabCode

./: .gitignore  CMakeLists.txt  README.md  TECHNICAL.md  agents.js  build.sh  bundled-skills.js  bundled-skills.json  gabcode.css  history.js  index.html  vfs.js
cli/: CMakeLists.txt  host_impl.cpp  host_impl.h  main.cpp  terminal.cpp  terminal.h
core/: CMakeLists.txt  agent_runner.cpp  agent_runner.h  agent_tool.cpp  bash_tool.cpp  brave_search.cpp  builtin_cmds.cpp  builtin_cmds.h  commands.cpp  compactor.cpp  compactor.h  config_wizard.cpp  config_wizard.h  edit_file.cpp  error.h  gabcore.h  gabcore_api.cpp  grep_tool.cpp  history.cpp  history.h  host_fns.cpp  host_fns.h  model_registry.cpp  model_registry.h  read_file.cpp  register_all.cpp  session.cpp  session.h  skill_loader.cpp  skill_loader.h  skill_tool.cpp  slash_commands.cpp  slash_commands.h  sse_parser.cpp  sse_parser.h  stream_consumer.cpp  stream_consumer.h  tool_dispatch.cpp  tool_dispatch.h  tool_parser.cpp  (+4 more)
tests/: CMakeLists.txt  test_builtin_cmds.cpp  test_slash_commands.cpp  test_sse_parser.cpp  test_tool_parser.cpp
web/: chats.js  config.js  gabcode.css  gabcode.js  index.html  llm.js  parser.js  prompts.js  skills.js  tools.js  ui.js  zip.js
